# Chimera

./: .gitignore  AGENTS.md  README.md
.agents/: AGENTS.md  PROJECT_FLOWS.md
.agents/plans/: AGENTS.md
.agents/plans/IMPLEMENTATION_ORDER/: AGENTS.md
.github/workflows/: ci.yml
ansible/: bus-stack.yml
ansible/files/: docker-compose.bus.yml
ansible/templates/configs/emqx/: emqx.conf.j2
ansible/templates/configs/nats/: nats.conf.j2
ansible/templates/configs/redis/: redis.conf.j2
ansible/templates/configs/redpanda/: redpanda.yaml.j2
backbone/: docker-compose.bus.yml
backbone/backup/: backup-configs.sh  backup-data.sh
backbone/configs/emqx/: acl.conf  emqx.conf
backbone/configs/nats/: nats.conf
backbone/configs/redis/: redis.conf
backbone/configs/redpanda/: redpanda.yaml
docker/base-python/: Dockerfile  requirements.txt
services/audio-router/: Dockerfile  pyproject.toml
services/audio-router/src/vox/: __init__.py  main.py
services/common/: pyproject.toml
services/common/src/lattice/: __init__.py  config.py  mqtt_client.py  nats_client.py  redis_client.py
services/llm-router/: Dockerfile  pyproject.toml
services/llm-router/src/mind/: main.py
services/vision-router/: Dockerfile  pyproject.toml
services/vision-router/src/gaze/: __init__.py  main.py
tests/: test_bus_compose.py  test_ci_workflow.py  test_structure.py
