[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chimera-common"
version = "0.1.0"
description = "Shared infrastructure utilities for Chimera services."
authors = [{name = "Chimera"}]
readme = "README.md"
requires-python = "==3.14"

[tool.poetry.dependencies]
python = "3.14"
